fix align header on right news panel

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -168,7 +168,7 @@ ul hr:last-child {
   @extend .transition;
 
   display: inline-block;
-  width: 48px;
+  width: 50px;
   height: 50px;
   text-align: center;
   line-height: 50px;
@@ -245,7 +245,9 @@ ul hr:last-child {
 .top-announcement{
   height: 150px;
 }
-
+.nocenter {
+  text-align: left !important;
+}
 .announcement {
   margin-bottom: 5px;
 
